# rl-algorithms

./: .gitignore  main.py  pyproject.toml
agents/: VectorDqn_agent.py  base_agent.py  dqn_agent.py  linear_agent.py
callbacks/: base_callback.py  callback.py  vec_callback.py
cart-pole-refactor/: main.py  pyproject.toml  requirements.txt
cart-pole-refactor/agents/: base_agent.py  linear_agent.py
cart-pole-refactor/callbacks/: callback.py  train.py
cart-pole-refactor/evaluation/: policy_evaluator.py
cart-pole-refactor/exploration/: base_schedule.py  decay_schedules.py
cart-pole-refactor/train/: trainer.py
components/: networks.py  replay_buffer.py
configs/: config.yaml
configs/agent/: agent.yaml
configs/callbacks/: default.yaml  evaluation.yaml  metrics.yaml
configs/envs/: env.yaml
envs/: double_cart_pole.py  factory.py  swing_up.py
evaluation/: policy_evaluator.py  vec_policy_evaluator.py
exploration/: base_schedule.py  decay_schedules.py
features/: feature_engineering.py
train/: trainer.py  vec_train.py
